--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     .donoderua { border-left: 10px solid #ffca28; background-color: #fff9c4; }
     .checkout { border-left: 10px solid #66bb6a; background-color: #c8e6c9; }
     .empilhadores { border-left: 10px solid #29b6f6; background-color: #b3e5fc; }
-    .funcionario { display: flex; align-items: center; margin-bottom: 8px; }
-    .funcionario input { padding: 6px; border-radius: 4px; border: 1px solid #ccc; flex: 1; }
-    .funcionario button { margin-left: 5px; background: #ccc; border: none; padding: 4px 8px; border-radius: 4px; cursor: pointer; }
+    .funcionarios-container { display: flex; flex-wrap: wrap; gap: 8px; }
+    .funcionario { display: flex; align-items: center; margin-bottom: 8px; width: calc(50% - 4px); }
+    .funcionario input { padding: 4px; border-radius: 4px; border: 1px solid #ccc; flex: 1; font-size: 10px; }
+    .funcionario button { margin-left: 3px; background: #ccc; border: none; padding: 3px 6px; border-radius: 4px; cursor: pointer; }
     .data-horario input { margin: 5px 10px 10px 0; padding: 8px; border-radius: 5px; border: 1px solid #ccc; }
     #controles { margin-bottom: 20px; display: flex; gap: 10px; flex-wrap: wrap; }
     #controles input, #controles select { padding: 8px; border-radius: 5px; border: 1px solid #ccc; }
@@ -53,13 +54,13 @@
   <button onclick="salvarDados()">SALVAR</button>
 </div>
 
-<div class="turno separador" id="separador1"><h2>SEPARADOR - 1º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div></div>
-<div class="turno separador" id="separador2"><h2>SEPARADOR - 2º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div></div>
-<div class="turno donoderua" id="donoderua1"><h2>DONO DE RUA - 1º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div></div>
-<div class="turno donoderua" id="donoderua2"><h2>DONO DE RUA - 2º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div></div>
-<div class="turno checkout" id="checkout1"><h2>CHECKOUT - 1º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div></div>
-<div class="turno checkout" id="checkout2"><h2>CHECKOUT - 2º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div></div>
-<div class="turno empilhadores" id="empilhadores"><h2>EMPILHADORES</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div></div>
+<div class="turno separador" id="separador1"><h2>SEPARADOR - 1º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div><div class="funcionarios-container"></div></div>
+<div class="turno separador" id="separador2"><h2>SEPARADOR - 2º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div><div class="funcionarios-container"></div></div>
+<div class="turno donoderua" id="donoderua1"><h2>DONO DE RUA - 1º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div><div class="funcionarios-container"></div></div>
+<div class="turno donoderua" id="donoderua2"><h2>DONO DE RUA - 2º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div><div class="funcionarios-container"></div></div>
+<div class="turno checkout" id="checkout1"><h2>CHECKOUT - 1º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div><div class="funcionarios-container"></div></div>
+<div class="turno checkout" id="checkout2"><h2>CHECKOUT - 2º TURNO</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div><div class="funcionarios-container"></div></div>
+<div class="turno empilhadores" id="empilhadores"><h2>EMPILHADORES</h2><div class="data-horario"><input placeholder="DATA"><input placeholder="HORÁRIO"></div><div class="funcionarios-container"></div></div>
 
 <script>
   const firebaseConfig = {
@@ -73,7 +74,7 @@
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
 
-  function criarFuncionario(nome, setor, turno=1) {
+  function criarFuncionario(nome, setor, turno = 1) {
     const div = document.createElement('div');
     div.className = 'funcionario';
     const input = document.createElement('input');
@@ -92,6 +93,7 @@
     btnExcluir.onclick = () => {
       if (confirm('Tem certeza que deseja excluir este funcionário?')) {
         div.remove();
+        ordenarFuncionarios(setor);
       }
     };
 
@@ -99,17 +101,18 @@
     div.appendChild(turnoSpan);
     div.appendChild(btnTroca);
     div.appendChild(btnExcluir);
-    document.getElementById(setor).appendChild(div);
 
+    const container = document.getElementById(setor).querySelector('.funcionarios-container');
+    container.appendChild(div);
     ordenarFuncionarios(setor);
   }
 
   function adicionarFuncionario() {
     const nome = document.getElementById('nomeNovo').value.trim();
     const setor = document.getElementById('setorNovo').value;
-    if (nome) { 
+    if (nome) {
       criarFuncionario(nome, setor);
-      document.getElementById('nomeNovo').value = ''; 
+      document.getElementById('nomeNovo').value = '';
     }
   }
 
@@ -119,7 +122,7 @@
       turnoAtual = turnoAtual % 3 + 1;
       turnoSpan.textContent = `(${turnoAtual}º TURNO)`;
     } else {
-      const parent = funcDiv.parentElement.id;
+      const parent = funcDiv.parentElement.parentElement.id;
       let proximo = '';
       if (parent.includes('separador')) {
         proximo = parent === 'separador1' ? 'separador2' : 'separador1';
@@ -128,14 +131,14 @@
       } else if (parent.includes('checkout')) {
         proximo = parent === 'checkout1' ? 'checkout2' : 'checkout1';
       }
-      document.getElementById(proximo).appendChild(funcDiv);
+      document.getElementById(proximo).querySelector('.funcionarios-container').appendChild(funcDiv);
       ordenarFuncionarios(proximo);
     }
     if (setor === 'empilhadores') ordenarFuncionarios(setor);
   }
 
   function ordenarFuncionarios(setor) {
-    const container = document.getElementById(setor);
+    const container = document.getElementById(setor).querySelector('.funcionarios-container');
     const funcionarios = Array.from(container.querySelectorAll('.funcionario'));
     funcionarios.sort((a, b) => a.querySelector('input').value.localeCompare(b.querySelector('input').value));
     funcionarios.forEach(f => container.appendChild(f));
@@ -143,24 +146,19 @@
 
   function gerarPDF() {
     const clone = document.body.cloneNode(true);
-    const controlesDiv = clone.querySelector('#controles');
-    if (controlesDiv) controlesDiv.remove();
-
+    clone.querySelector('#controles').remove();
     clone.querySelectorAll('.funcionario button').forEach(btn => btn.remove());
     clone.querySelectorAll('.turno-empilhador').forEach(span => span.remove());
-
     const logo = document.getElementById('logoPDF').cloneNode();
     logo.style.display = 'block';
     clone.insertBefore(logo, clone.firstChild);
-
-    const opt = {
+    html2pdf().set({
       margin: 5,
-      filename: 'tabela_horarios_' + new Date().toISOString().slice(0,10) + '.pdf',
+      filename: 'tabela_horarios_' + new Date().toISOString().slice(0, 10) + '.pdf',
       image: { type: 'jpeg', quality: 0.98 },
       html2canvas: { scale: 2 },
       jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-    };
-    html2pdf().set(opt).from(clone).save();
+    }).from(clone).save();
   }
 
   function salvarDados() {
