--- a/index.html
+++ b/index.html
@@ -22,9 +22,32 @@
     .empilhadores { border-left: 10px solid #29b6f6; background-color: #b3e5fc; }
     .funcionarios-container { display: flex; flex-wrap: wrap; gap: 8px; }
     .funcionario { display: flex; align-items: center; margin-bottom: 8px; width: calc(50% - 4px); }
-    .funcionario input { padding: 4px; border-radius: 4px; border: 1px solid #ccc; flex: 1; font-size: 10px; }
+    .funcionario input { 
+      padding: 4px; 
+      border-radius: 4px; 
+      border: 1px solid #ccc; 
+      flex: 1; 
+      font-size: 14px; 
+      max-length: 50; 
+      max-width: 200px;
+    }
     .funcionario button { margin-left: 3px; background: #ccc; border: none; padding: 3px 6px; border-radius: 4px; cursor: pointer; }
-    .data-horario input { margin: 5px 10px 10px 0; padding: 8px; border-radius: 5px; border: 1px solid #ccc; }
+    .data-horario { 
+      text-align: center; 
+      font-weight: bold; 
+      font-size: 16px; 
+      margin-bottom: 15px; 
+      padding: 10px; 
+      background-color: #f9f9f9; 
+      border: 2px solid #ccc; 
+      border-radius: 8px;
+    }
+    .data-horario input { 
+      text-align: center; 
+      font-weight: bold; 
+      font-size: 16px; 
+      margin: 5px; 
+    }
     #controles { margin-bottom: 20px; display: flex; gap: 10px; flex-wrap: wrap; }
     #controles input, #controles select { padding: 8px; border-radius: 5px; border: 1px solid #ccc; }
     #controles button { background: #0288d1; color: white; border: none; padding: 8px 12px; border-radius: 5px; cursor: pointer; }
@@ -79,6 +102,7 @@
     div.className = 'funcionario';
     const input = document.createElement('input');
     input.value = nome;
+    input.setAttribute('maxlength', '50');
 
     const turnoSpan = document.createElement('span');
     turnoSpan.className = 'turno-empilhador';
